# cyn-read

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-arm.yml
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: file.rs  mod.rs  splashscreen.rs
src/assets/: main.css
src/components/common/: StatusBarProgress.vue
src/components/documents/: ContextMenu.vue  CreateDocumentModal.vue  FileContextMenu.vue  FileList.vue  FilePreview.vue  FileToolbar.vue  RenameModal.vue
src/hooks/: useClipboard.ts  useFileNavigation.ts  useFileOperations.ts  useFileSelection.ts  useProgress.ts
src/layout/default/: LayoutFooter.vue  LayoutLogo.vue  LayoutSider.vue  index.vue
src/routes/: index.ts
src/stores/: statusStore.ts  themeStore.ts
src/types/: config.ts  file.ts
src/utils/: config.ts  fileOperations.ts  fileSystem.ts  metadata.ts
src/views/about/: index.vue
src/views/documents/: index.vue
src/views/home/: index.vue
src/views/ocr/: index.vue
src/views/pdf-editor/: index.vue
src/views/settings/: index.vue
